Mudança para mostrar landPage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="description" content="Landing-page com o foco em vender o meu software de gestão de estacionamento">
         <nav>
             <a href="#inicio" class="empresa">
-                <img src="./img/Medieval Crown.png" alt="logo">
+                <img src="./img2/Medieval Crown.png" alt="logo">
                 <span>ParKing</span>
             </a>
             <a href="#home">HOME</a>
@@ -34,28 +34,28 @@
             <a href="#contato" class="contactar">FALAR COM CONSULTOR</a>
         </nav>
         <button id="menuButton">
-            <img src="./img/menu hamburgue.svg" alt="menu hamburgue">
+            <img src="./img2/menu hamburgue.svg" alt="menu hamburgue">
         </button>
         <div id="menu" class="menuLateral">
             <a href="#home">
                 Home
-                <img src="./img/seta.png" alt="seta">
+                <img src="./img2/seta.png" alt="seta">
             </a>
             <a href="#demo">
                 Demo
-                <img src="./img/seta.png" alt="seta">
+                <img src="./img2/seta.png" alt="seta">
             </a>
             <a href="#clientes">
                 Clientes
-                <img src="./img/seta.png" alt="seta">
+                <img src="./img2/seta.png" alt="seta">
             </a>
             <a href="#planos">
                 Planos
-                <img src="./img/seta.png" alt="seta">
+                <img src="./img2/seta.png" alt="seta">
             </a>
             <a href="#contato" class="buttonOrange">
                 Consultoria
-                <img src="./img/seta.png" alt="seta">
+                <img src="./img2/seta.png" alt="seta">
             </a>
         </div>
     </header>
@@ -63,7 +63,7 @@
     <main>
         <!-- Principal -->
         <section class="principal" id="home">
-            <img src="./img/fundo.png" alt="fundo" class="fundo" fetchpriority="high" width="X" height="Y">
+            <img src="./img2/fundo.png" alt="fundo" class="fundo" fetchpriority="high" width="X" height="Y">
             <div class="headline">SOFTWARE DE ELITE PARA GESTORES</div>
             <h1 class="branco">ASSUMA O TRONO DA</h1>
             <h1 class="laranja">GESTÃO DO SEU</h1>
@@ -82,26 +82,26 @@
                         confusas. Nosso Dashboard entrega o RAIO-X do seu negócio em <br>
                         segundos.</p>
                     <span>
-                        <img src="./img/Done.svg" alt="Feito">
+                        <img src="./img2/Done.svg" alt="Feito">
                         Monitoramento de Vagas em Tempo Real
                     </span><br>
                     <span>
-                        <img src="./img/Done.svg" alt="Feito">
+                        <img src="./img2/Done.svg" alt="Feito">
                         Relatórios Financeiros
                     </span>
                 </div>
-                <img src="./img/Rectangle 1.png" alt="tela do app" class="app" width="X" height="Y">
+                <img src="./img2/Rectangle 1.png" alt="tela do app" class="app" width="X" height="Y">
             </div>
         </section>
         <!-- Parcerias -->
         <section class="parcerias" id="clientes">
             <h2>Quem já governa com o parKing Station</h2>
             <div class="parceiros">
-                <img src="./img/uber-svgrepo-com 1.svg" alt="uber" width="X" height="Y">
-                <img src="./img/airbnb 1.svg" alt="airbnb" width="X" height="Y">
-                <img src="./img/Apple Inc.svg" alt="apple" width="X" height="Y">
-                <img src="./img/Google.svg" alt="google" width="X" height="Y" class="icontoggle">
-                <img src="./img/Microsoft.svg" alt="microsoft" width="X" height="Y" class="icontoggle">
+                <img src="./img2/uber-svgrepo-com 1.svg" alt="uber" width="X" height="Y">
+                <img src="./img2/airbnb 1.svg" alt="airbnb" width="X" height="Y">
+                <img src="./img2/Apple Inc.svg" alt="apple" width="X" height="Y">
+                <img src="./img2/Google.svg" alt="google" width="X" height="Y" class="icontoggle">
+                <img src="./img2/Microsoft.svg" alt="microsoft" width="X" height="Y" class="icontoggle">
             </div>
         </section>
         <!-- Operações -->
@@ -111,21 +111,21 @@
             <div class="caixa">
                 <div class="destaques">
                     <div class="circulo">
-                        <img src="./img/Shopping Cart.svg" alt="carrinho de compras" width="X" height="Y">
+                        <img src="./img2/Shopping Cart.svg" alt="carrinho de compras" width="X" height="Y">
                     </div>
                     <h3>Shoppings & Varejo</h3>
                     <p>Gestão complexa de mensalistas, credenciados <br>e fluxo rotativo intenso sem filas na saída.</p>
                 </div>
                 <div class="destaques">
                     <div class="circulo">
-                        <img src="./img/Company.svg" alt="Redes de estacionamentos" width="X" height="Y">
+                        <img src="./img2/Company.svg" alt="Redes de estacionamentos" width="X" height="Y">
                     </div>
                     <h3>Redes de estacionamentos</h3>
                     <p>Centralize 10, 50 ou 100 unidades em um único <br>painel. Controle total do seu patrimônio.</p>
                 </div>
                 <div class="destaques">
                     <div class="circulo">
-                        <img src="./img/Airplane Take Off.svg" alt="Aeroportos & Eventos" width="X" height="Y">
+                        <img src="./img2/Airplane Take Off.svg" alt="Aeroportos & Eventos" width="X" height="Y">
                     </div>
                     <h3>Aeroportos & Eventos</h3>
                     <p>Máxima velocidade na operação e sistemas <br>redundantes que nunca deixam o cliente <br>travado.
@@ -153,15 +153,15 @@
                     <span>/mês</span>
                     <ul class="beneficios">
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Até 200 Vagas
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Controle de Entrada/Saída
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Relatório Básico
                         </li>
                     </ul>
@@ -176,19 +176,19 @@
                     <span>/mês</span>
                     <ul class="beneficios">
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Vagas ilimitadas
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Sistema Anti-Fraude
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Integração com Cancelas
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             App do gesto
                         </li>
                     </ul>
@@ -199,15 +199,15 @@
                     <p class="SobConsulta" id="Sob consulta">Sob consulta</p>
                     <ul class="beneficios">
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Multi-Unidades (Redes)
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Api aberta
                         </li>
                         <li>
-                            <img src="./img/Done.svg" alt="Feito" width="X" height="Y">
+                            <img src="./img2/Done.svg" alt="Feito" width="X" height="Y">
                             Vagas ilimitadas
                         </li>
                     </ul>
@@ -224,8 +224,8 @@
                     diários automáticos.</p>
             </div>
             <div class="icons">
-                <img src="./img/Lock.svg" alt="cadeado" width="X" height="Y">
-                <img src="./img/Cloud.svg" alt="nuvem" width="X" height="Y">
+                <img src="./img2/Lock.svg" alt="cadeado" width="X" height="Y">
+                <img src="./img2/Cloud.svg" alt="nuvem" width="X" height="Y">
             </div>
         </section>
     </main>
@@ -238,19 +238,19 @@
                 <div class="input-box">
                     <label for="nome" class="sr-only">Seu nome</label>
                     <input type="text" id="nome" placeholder="Seu nome">
-                    <img src="./img/Content.svg" alt="limpar campo" class="clear-btn" data-input="nome" width="X"
+                    <img src="./img2/Content.svg" alt="limpar campo" class="clear-btn" data-input="nome" width="X"
                         height="Y">
                 </div>
                 <div class="input-box">
                     <label for="empresa" class="sr-only">Nome da empresa</label>
                     <input type="text" id="empresa" placeholder="Nome da empresa">
-                    <img src="./img/Content.svg" alt="limpar campo" class="clear-btn" data-input="empresa" width="X"
+                    <img src="./img2/Content.svg" alt="limpar campo" class="clear-btn" data-input="empresa" width="X"
                         height="Y">
                 </div>
                 <div class="input-box full">
                     <label for="outro" class="sr-only">Seu e-mail comercial</label>
                     <input type="text" id="outro" placeholder="Qual seu e-mail comercial ?">
-                    <img src="./img/Content.svg" alt="limpar campo" class="clear-btn" data-input="outro" width="X"
+                    <img src="./img2/Content.svg" alt="limpar campo" class="clear-btn" data-input="outro" width="X"
                         height="Y">
                 </div>
                 <label for="campo-vagas" class="sr-only">Quantas vagas você gerencia?</label>
@@ -268,7 +268,7 @@
         <div class="contatos">
             <div class="telefone">
                 <div class="cinza">
-                    <img src="./img/Phone.svg" alt="telefone" width="X" height="Y">
+                    <img src="./img2/Phone.svg" alt="telefone" width="X" height="Y">
                 </div>
                 <div>
                     <h3>Ligue para nós</h3>
@@ -277,7 +277,7 @@
             </div>
             <div class="email">
                 <div class="cinza">
-                    <img src="./img/Email.svg" alt="email" width="X" height="Y">
+                    <img src="./img2/Email.svg" alt="email" width="X" height="Y">
                 </div>
                 <div>
                     <h3>E-mail</h3>
@@ -286,7 +286,7 @@
             </div>
             <div class="linha-horizontal"></div>
             <div class="logo2">
-                <img src="./img/Medieval Crown.svg" alt="logo" width="X" height="Y">
+                <img src="./img2/Medieval Crown.svg" alt="logo" width="X" height="Y">
                 <h3>ParKing Station</h3>
             </div>
             <span>
